# sql-guard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: 01_minimal.py  02_multi_dialect.py  03_custom_rule.py
src/sql_guard/: __init__.py  pii.py  sql_guard.py
tests/: conftest.py  test_extensibility.py  test_pii_denylist.py  test_sql_guard.py
