[project]
name = "sql-guard"
version = "0.1.0"
description = "Deterministic policy engine for LLM-generated SQL: SELECT-only, PII column denylist, table allowlist, cost cap. Multi-dialect via sqlglot (BigQuery, Snowflake, Postgres, Trino, …)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Seagrass Engineering" }]
keywords = [
    "sql",
    "llm",
    "agent",
    "bigquery",
    "snowflake",
    "postgres",
    "security",
    "guardrails",
    "pii",
    "adk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Security",
    "Typing :: Typed",
]

dependencies = [
    "sqlglot>=25,<27",
]

[project.optional-dependencies]
adk = [
    "google-adk>=1.27,<2",
    "google-cloud-bigquery>=3.38,<4",
]
dev = [
    "pytest>=8,<10",
    "pytest-cov>=6,<8",
    "hypothesis>=6,<7",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
]

[project.urls]
Source = "https://github.com/seagrass/sql-guard"
Issues = "https://github.com/seagrass/sql-guard/issues"
Changelog = "https://github.com/seagrass/sql-guard/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sql_guard"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
